2013-04-02  6.8.4-7 Cristy  <quetzlzacatenango@image...>
  * Return MagickWand for the library name for Wand.pc.

2013-04-01  6.8.4-7 Bastien Roucaries  <roucaries.basti...>
  * Prepare X11 support as a plugin.
  * Fix compilation under HPUX of perlmagick

2013-04-01  6.8.4-6 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.4-6, SVN revision 11640.

2013-04-01  6.8.4-6 Cristy  <quetzlzacatenango@image...>
  * The -clut option return a luma grayscale instead of the expected luminance.
  * Add moduledir variable to MagickCore.pc to support the MagickFilter and
    MagickCore kits.
  * Caption fits the sized area (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23085).

2013-03-31  6.8.4-5 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.4-5, SVN revision 11619.

2013-03-30  6.8.4-5 Cristy  <quetzlzacatenango@image...>
  * Fix transient bug when writing grayscale MIFF images.
  * Adding noise to a gray image returns a gray image as expected.
  * Image interlace no longer overwritten by proper cloning for GIF format.
  * Extract the clipping path from an image file with clip:myimage.

2013-03-29  6.8.4-4 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.4-4, SVN revision 11591.

2013-03-29  6.8.4-4 Cristy  <quetzlzacatenango@image...>
  * Update unit test signatures for Q8.
  * Resolve send() / recv() socket problems under MinGW.

2013-03-28  6.8.4-3 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.4-3, SVN revision 11581.

2013-03-28  6.8.4-3 Cristy  <quetzlzacatenango@image...>
  * Revert patch to ContrastStretchImage() to match results from 6.8.3-3.

2013-03-27  6.8.4-2 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.4-2, SVN revision 11558.

2013-03-27  6.8.4-2 Cristy  <quetzlzacatenango@image...>
  * Use MorphologyApply() rather than MorphologyImage() for -sharpen / -blur.

2013-03-27  6.8.4-1 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.4-1, SVN revision 11552.
